1/1 2025 chinrh chi tiết chuyên trang, slide chính quyền mobile, chỉnh banner 50 năm

--- a/PhanVanMai/Ảnh - Video - CT Phan Văn Mãi.html
+++ b/PhanVanMai/Ảnh - Video - CT Phan Văn Mãi.html
@@ -339,7 +339,7 @@
                             title = curEntry.getTitle(locale)
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
-                            viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                           viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/chi-tiet/-/asset_publisher/CMza76FA1jTp/content/${renderer.getUrlTitle()}/39403"
                             smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest)!"/documents/20123/41696/cover-emty-img.jpg"
                             indexLocal = indexLocal + 1
                             />
@@ -393,7 +393,7 @@
                             title = curEntry.getTitle(locale)
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
-                            viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                           viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/chi-tiet/-/asset_publisher/CMza76FA1jTp/content/${renderer.getUrlTitle()}/39403"
                             smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest)!"/documents/20123/41696/cover-emty-img.jpg"
                             indexLocal = indexLocal + 1
                             />
