--- a/TrangChu/banner_50_nam.html
+++ b/TrangChu/banner_50_nam.html
@@ -1,9 +1,19 @@
 <div class="p-2 bg-light text-dark">
-  <a href="/tin-tuc-su-kien-3">
+  <a href="/sự-kiện-lễ-hội">
     <img
-      src="/documents/39403/49303/304.png"
+      src="/documents/39403/53397/30-4+NGANG+%282%29.png/63d5289d-a2bc-1a32-4844-ee30ad06a42d?t=1734799347189"
       alt="Main news image"
-      class="w-100 d-block object-fit-cover"
+      class="w-100 d-block object-fit-cover banner-50nam"
     />
   </a>
 </div>
+<style>
+  .component-html .banner-50nam {
+    height: 489.57px !important;
+  }
+  @media only screen and (max-width: 576px) {
+    .custom-by-portal-hcm .h-190 {
+      height: 258px !important;
+    }
+  }
+</style>
